[maqing]finished exercise 4

--- a/src/exercise-1/styles/App.css
+++ b/src/exercise-1/styles/App.css
@@ -1,8 +1,15 @@
 .link {
     text-decoration: none;
     color: black;
+    margin:20px;
+    padding:10px;
 }
 
 .active {
     text-decoration: underline;
+}
+
+.header {
+    background: gainsboro;
+    padding:10px;
 }
